# reed-solomon-16

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md  build.rs
benches/: benchmarks.rs
examples/: quick-comparison.rs  test-random-roundtrips.rs
src/: algorithm.md  decoder_result.rs  encoder_result.rs  engine.rs  lib.rs  rate.rs  reed_solomon.rs  test_util.rs
src/engine/: engine_avx2.rs  engine_naive.rs  engine_nosimd.rs  shards.rs  tables.rs
src/rate/: decoder_work.rs  encoder_work.rs  rate_default.rs  rate_high.rs  rate_low.rs
util/: run-all-tests
